; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/etc/extr_min.c_main.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/etc/extr_min.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"print\00", align 1
@print = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32 0, i32* %1, align 4
  %3 = call i32* (...) @lua_open()
  store i32* %3, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @print, align 4
  %6 = call i32 @lua_register(i32* %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 @luaL_dofile(i32* %7, i32* null)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %0
  %11 = load i32, i32* @stderr, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = call i8* @lua_tostring(i32* %12, i32 -1)
  %14 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %13)
  br label %15

15:                                               ; preds = %10, %0
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @lua_close(i32* %16)
  ret i32 0
}

declare dso_local i32* @lua_open(...) #1

declare dso_local i32 @lua_register(i32*, i8*, i32) #1

declare dso_local i64 @luaL_dofile(i32*, i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @lua_tostring(i32*, i32) #1

declare dso_local i32 @lua_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
